--- a/.github/workflows/antora-test.yml
+++ b/.github/workflows/antora-test.yml
@@ -2,7 +2,7 @@
 name: Publish to GitHub Pages
 on:
   push:
-    branches: [antora-test]
+    branches: [antora-test, main]
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 concurrency:
