--- a/antora-playbook.yml
+++ b/antora-playbook.yml
@@ -1,8 +1,16 @@
+# Configuration based on Antora Generator Template 
+# Source: https://code.asam.net/common/templates/antora-base-repo-example/-/blob/standard_generator/site.yml
+# tag::site[]
 site:
   title: ASAM OpenMATERIAL
   url: https://asam-ev.github.io/OpenMATERIAL/
   start_page: asamopenmaterial:specification:index.adoc 
+# end::site[]
+urls: # Creates a redirect for the newest version to the link "latest"
+  latest_version_segment_strategy: redirect:to
+  latest_version_segment: latest
 
+# tag::content[]
 content:
   sources:
   - url: https://github.com/asam-ev/OpenMATERIAL.git
@@ -12,11 +20,13 @@ content:
   - url: https://code.asam.net/common/asam-terminology.git
     start_path: .antora
     tags: [v*,V*]
+# end::content[]
 
 ui:
   bundle:
     url: https://code.asam.net/common/antora-ui/-/jobs/artifacts/main/raw/build/ui-bundle.zip?job=bundle-stable
     snapshot: true
+#  supplemental_files: ./supplemental_ui # Activate this if you need to make local UI changes. Check the official Antora documentation for more information.
 
 output:
   clean: true
@@ -24,3 +34,43 @@ output:
   
 runtime:
   fetch: true
+  
+# tag::attributes[]
+asciidoc:
+  attributes:
+    page-pagination: true
+    hide-uri-scheme: ""
+    kroki-server-url: 'http://kroki:8000'
+    kroki-fetch-diagram: ""
+    # Allow URI read to retrieve SVG on compilation
+    allow-uri-read: true
+    # use SVG unless otherwise specified
+    kroki-default-format: svg
+    # Make SVG inline so that we can get interactive (can be overridden by schema with "opts=none")
+    kroki-default-options: interactive
+    sectnums: "@"
+    xrefstyle: short@
+    listing-caption: Code
+    page-width-limit: none@
+    THIS_STANDARD: ASAM OpenMATERIAL
+
+# end::attributes[]
+
+  extensions:
+  - asciidoctor-kroki
+  - './asam-antora-extensions/asam-asciidoctor_extensions.js'
+  - './asam-antora-extensions/asam-asciidoctor_extensions-registered.js'
+
+# tag::antora[]
+antora:
+  extensions:
+    - require: '@antora/lunr-extension'
+    - require: './asam-antora-extensions/asam-antora_extension.js'
+      numbered_titles: true
+      section_number_style: 'iso'
+      alternate_xref_style: 'full'
+      loft: true
+      local_to_global_references: true
+      bibliography: true
+
+# end::antora[]
