--- a/.github/workflows/antora-test.yml
+++ b/.github/workflows/antora-test.yml
@@ -1,3 +1,4 @@
+# This is a minimal working Antora configuration
 # Source: https://docs.antora.org/antora/latest/publish-to-github-pages/ -  Example 2
 name: Publish to GitHub Pages
 on:
