Update GitHub actions.
Signed-off-by: Frank Ralf <frank.ralf@parson-europe.com>

--- a/.github/workflows/antora-test.yml
+++ b/.github/workflows/antora-test.yml
@@ -1,6 +1,6 @@
 # This is a minimal working Antora configuration
 # Source: https://docs.antora.org/antora/latest/publish-to-github-pages/ -  Example 2
-name: Publish to GitHub Pages
+name: Antora test
 on:
   push:
     branches: [antora-test, main]
