Use placeholder in file name for invalid file.
Signed-off-by: Frank Ralf <frank.ralf@parson-europe.com>

--- a/.github/workflows/validate-json.yaml
+++ b/.github/workflows/validate-json.yaml
@@ -15,4 +15,4 @@ jobs:
         uses: docker://orrosenblatt/validate-json-action:latest
         env:
           INPUT_SCHEMA: ./schemas/asset_schema.json
-          INPUT_JSONS: ./examples/example_asset.xoma,./examples/example_material.xomp
+          INPUT_JSONS: ./examples/example_asset.xoma,./examples/*.xomp
