--- a/.github/workflows/validate-json.yaml
+++ b/.github/workflows/validate-json.yaml
@@ -1,5 +1,6 @@
 # Validate JSON files
-# Source: https://github.com/marketplace/actions/validate-json
+# Source: https://github.com/nhalstead/validate-json-action
+# Forked from: https://github.com/marketplace/actions/validate-json
 name: Validate Asset JSONs
 
 on: 
@@ -11,8 +12,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
-      - name: Validate JSON
-        uses: docker://orrosenblatt/validate-json-action:latest
+      - name: Validate JSON with Glob
+        uses: nhalstead/validate-json-action@0.1.3
         env:
           INPUT_SCHEMA: ./schemas/asset_schema.json
           INPUT_JSONS: ./examples/example_asset.xoma,./examples/*.xomp
+ 
