--- a/.github/workflows/validate-json.yaml
+++ b/.github/workflows/validate-json.yaml
@@ -14,7 +14,7 @@ jobs:
       - uses: actions/checkout@v1
       - name: Validate JSON with Glob
         uses: nhalstead/validate-json-action@0.1.3
-        env:
-          INPUT_SCHEMA: ./schemas/asset_schema.json
-          INPUT_JSONS: ./examples/example_asset.xoma,./examples/*.xomp
+        with:
+          schema: ./schemas/asset_schema.json
+          jsons: ./examples/example_asset.xoma,./examples/*.xomp       
  
