--- a/.github/workflows/validate-json.yaml
+++ b/.github/workflows/validate-json.yaml
@@ -1,18 +1,19 @@
 # Validate JSON files
 # Source: https://github.com/nhalstead/validate-json-action
 # Forked from: https://github.com/marketplace/actions/validate-json
-name: Validate Asset JSONs
+name: Validate JSON schemas for assets and materials
 
 on: 
   push:
     branches: [ main, json-validation-test, antora-test ]
 
 jobs:
-  asset-validation:
+  json-schema-validation:
+    name: JSON schema validation
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
-      - name: Validate JSON with Glob
+      - name: Validate "asset" JSONs
         uses: nhalstead/validate-json-action@0.1.3
         with:
           schema: ./schemas/asset_schema.json
