--- a/.github/workflows/antora-build.yml
+++ b/.github/workflows/antora-build.yml
@@ -7,20 +7,25 @@ on:
     branches: [main]
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
+
 concurrency:
   group: github-pages
   cancel-in-progress: false
+
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
   contents: read
   pages: write
   id-token: write
+
 jobs:
   build:
+    name: Build and publish documentation with Antora
     runs-on: ubuntu-latest
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
+
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
@@ -34,7 +39,7 @@ jobs:
       run: npm i antora
     - name: Generate Site
       run: npx antora antora-playbook.yml
-    - name: Upload Artifacts
+    - name: Upload artifacts
       uses: actions/upload-pages-artifact@v3
       with:
         path: build/site
