--- a/.github/workflows/antora-build.yml
+++ b/.github/workflows/antora-build.yml
@@ -4,7 +4,7 @@
 name: Publish with Antora to GitHub Pages
 on:
   push:
-    branches: [main]
+    branches: [ main, json-validation-test, antora-test ]
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
