Change step names.
Signed-off-by: Frank Ralf <frank.ralf@parson-europe.com>

--- a/.github/workflows/validate-json.yaml
+++ b/.github/workflows/validate-json.yaml
@@ -15,13 +15,13 @@ jobs:
     steps:
       - uses: actions/checkout@v1
       
-      - name: Validate "asset" JSONs
+      - name: Validate "asset" JSON schemas
         uses: nhalstead/validate-json-action@0.1.3
         with:
           schema: ./schemas/asset_schema.json
           jsons: ./examples/*_asset.xoma
           
-      - name: Validate "material" JSONs
+      - name: Validate "material" JSON schemas
         uses: nhalstead/validate-json-action@0.1.3
         with:
           schema: ./schemas/material_schema.json
