--- a/.github/workflows/antora-build-basic.yml
+++ b/.github/workflows/antora-build-basic.yml
@@ -1,9 +1,10 @@
-# This is a minimal working Antora configuration
-# Source: https://docs.antora.org/antora/latest/publish-to-github-pages/ -  Example 2
-name: Antora test
+# Minimal working Antora configuration to publish to GitHub Pages
+# Source: https://docs.antora.org/antora/latest/publish-to-github-pages/  (example 2)
+# Output URL: https://asam-ev.github.io/OpenMATERIAL
+name: Publish with Antora to GitHub Pages (basic)
 on:
   push:
-    branches: [antora-test, main]
+    branches: [main]
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 concurrency:
