--- a/.github/workflows/antora-build-full.yml
+++ b/.github/workflows/antora-build-full.yml
@@ -14,12 +14,12 @@ jobs:
 
     runs-on: Ubuntu-latest
 
-    env:
-      MUP_KEY: ${{ secrets.ANTORA_DISPATCH }}
+ #   env:
+ #     MUP_KEY: ${{ secrets.ANTORA_DISPATCH }}
 
     steps:
     - name: Trigger generator
-      if: ${{ env.MUP_KEY != '' }}
+ #     if: ${{ env.MUP_KEY != '' }}
       uses: peter-evans/repository-dispatch@v3
       with:
         token: ${{ secrets.ANTORA_DISPATCH }}
